# function-templates

./: .eslintrc.json  .gitignore  .npmrc  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  release-please-config.json  testing.sh
.github/actions/build-release/: action.yml  index.js  index.sh
.github/workflows/: create-release.yaml  release-please.yaml
.husky/: pre-commit  prepare-commit-msg
templates/evm-rust/: .gitignore  .prettierignore  Dockerfile  Makefile  README.md  foundry.toml  hardhat.config.ts  package.json  setup.sh
templates/evm-rust/script/: check_function.ts  extend_function.ts
templates/evm-rust/scripts/: deploy.ts
templates/evm-rust/switchboard-function/: Cargo.toml  Dockerfile  Makefile
templates/evm-typescript/: .env.example  .env.function  .eslintignore  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  esbuild.js  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json
templates/evm-typescript/script/: create_function.ts
templates/evm-typescript/switchboard-function/: .env.example  Dockerfile  build.rs  esbuild.js  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
templates/solana/: Cargo.toml  Makefile  README.md  package.json  setup.sh
templates/solana-anchor/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  Makefile  README.md  package.json  setup.bat  setup.sh
templates/solana-anchor/program/: Cargo.toml
templates/solana-anchor/program/src/: lib.rs
templates/solana-anchor/program/tests/: switchboard-client.ts
templates/solana-anchor/sgx-function/: .gitignore  Cargo.toml  Dockerfile
(+17 files in other folders)
